2007-09-21    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_error): calls to tino_sock_error improved.
	Now it shall be more reliable (longjmp case) and is more easy to
	use (default -1 return).

2007-09-20    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt_usage): usage on TINO_GETOPT_MIN without
	TINO_GETOPT_MAX now better to understand

2007-09-18    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_select_timeoutEn): BUGfix: if forepoll was
	called out of alarm functions, it did not work.  Also the loop
	returned after 1000 signals, which was a little bit wrong.
	(tino_sock_select_timeoutEn): longstanding BUG removed: If a
	socket is freed in select_loop, the next-iteration stopped.  This
	only had bad sideffects when a forcepoll was done, but this
	explains some "starvation" problems I saw.

	* sockbuf.h (tino_sockbuf_processN): poll function now gets passed
	the original default poll value to alter it.

	* alloc.h (tino_strdup): fatal builtin (as it seems I too often
	pass NULL values there).

	* sockbuf.h (tino_sockbuf_processN): read_hook and write_hook now
	can alter errno, it is restored to correct values.

	* file.h (tino_file_read_allE): Bugfix (OOPS): Error condition was
	no more detected - glitch in recent changes ..

	* data.h (tino_data_stream): disabled, as the stdlib routines
	fread/fwrite do not work reliably (they return plain crap in case
	of multiple SIGALRM while waiting for IO).

	* file.h (tino_file_clearerr): added

	* data.h (tino_data_stream_read, tino_data_stream_write): bugfix:
	fread() and fwrite() actually *can* do a short io and return
	EINTR!  I am really puzzled, as I always thought, that this
	functions can overcome alarm().

	* xd.h (tino_xd): hex address added

	* data.h (tino_data_writeA, tino_data_readA): intr function
	removed in favor of TINO_ALARM_RUN.

2007-09-17    <tino@firebird.03.softkill.net>

	* alarm.h (tino_alarm_set): 4th argument (runtime) to alarm
	function added.
