@@ -72,7 +72,10 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 # $Log$
-# Revision 1.34  2007-01-28 03:06:19  tino
+# Revision 1.35  2007-09-21 11:43:58  tino
+# Makefile now should compile targets once
+#
+# Revision 1.34  2007/01/28 03:06:19  tino
 # diet fixes
 #
 # Revision 1.33  2006/11/09 23:45:48  tino
@@ -290,7 +293,7 @@ diff:
 #C# automatically generated dependencies
 
 #S PROGS
-#R $(PROG#c#).o::	$(COMMON)
+#R $(PROG#c#).o:	$(COMMON)
 #R $(PROG#c#):	$(PROG#c#).o $(OBJS) $(LIBS)
 
 #S TINOCOPY
@@ -302,4 +305,4 @@ diff:
 #S PROGS
 #R
 #R# included: #v#.d
-#R$(PROG#c#).o::#include(#v#.d)
+#R$(PROG#c#).o:#include(#v#.d)
